# ullebets-prod

./: .gitignore  README.md  pyproject.toml
data/support/: leagues-and-teams.json  unibetLeagueUrls.json
docs/: env-placeholders.md  source-map.md
scripts/forward_v2/: audit_source_connectivity.py  backfill_match_enrichment.py  bootstrap_indexes.py  build_ai_bet_exports.py  build_matchups_league_avg.py  build_matchups_score.py  build_model_snapshots.py  build_teamprofiles.py  build_training_exports.py  capture_closing_snapshots.py  capture_odds_checkpoints.py  ingest_fixtures_window.py  ingest_match_enrichment.py  ingest_unibet_odds.py  materialize_parity_reports.py  refresh_clv_tracking.py  run_auto_analysis.py  settle_matchups_outputs.py  settle_model_snapshots.py  smoke_test_v2.py  sync_support_data.py  verify_match_enrichment.py
scripts/offline_v1/: build_features.py  build_normalized_dataset.py  extract_historical_sources.py  extract_supplemental_sources.py  run_backtest_integrity_audit.py  run_data_audit.py  run_model_diagnostics.py  run_odds_timing_audit.py  run_source_corpus_audit.py  run_walk_forward.py  sync_support_data.py
src/ullebets_v1/: __init__.py  config.py  paths.py
src/ullebets_v2/: __init__.py  config.py  safety.py
tests/: test_config.py  test_coverage.py  test_data_audit.py  test_diagnostics.py  test_feature_builder.py  test_historical_extract.py  test_market_normalization.py  test_odds_timing.py  test_outcomes.py  test_signal_report.py  test_source_corpus.py  test_support_data.py  test_teamstats_long.py  test_walk_forward.py
(+146 files in other folders)
